--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-20 21:19+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-07-23 06:04+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1381,7 +1381,7 @@ msgid "Full"
 msgstr "Lleno"
 
 msgid "GID"
-msgstr ""
+msgstr "GID"
 
 msgid "Gabon"
 msgstr "Gabón"
@@ -3260,7 +3260,7 @@ msgid "System Logs"
 msgstr "Logs del sistema"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Cuentas del sistema"
 
 msgid "System time"
 msgstr "Hora del sistema"
@@ -3756,7 +3756,7 @@ msgid "U.S. Virgin Islands"
 msgstr "Islas Vírgenes (EEUU)"
 
 msgid "UID"
-msgstr ""
+msgstr "UID"
 
 msgid "UNKNOWN"
 msgstr "Desconocido"
@@ -3768,7 +3768,7 @@ msgid "Ukraine"
 msgstr "Ucrania"
 
 msgid "Unauthorized attempt to modify the system account '%s'"
-msgstr ""
+msgstr "Intento no autorizado de modificar la cuenta del sistema '%s'"
 
 msgid "Uncompressed"
 msgstr "Sin comprimir"
@@ -3900,7 +3900,7 @@ msgid "User ID '%d' already exist"
 msgstr "El ID de usuario '%d' ya existe"
 
 msgid "User accounts"
-msgstr ""
+msgstr "Cuentas de usuario"
 
 msgid "User home directory"
 msgstr "Directorio Home de usuario"
