--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.5.1) stable; urgency=low
+
+  * Fix bug.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Jul 2015 21:08:47 +0200
+
 openmediavault (2.1.5) stable; urgency=low
 
   * Update locales.
