--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.6) stable; urgency=low
+
+  * Update the S.M.A.R.T. attribute descriptions.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Jul 2015 23:16:49 +0200
+
 openmediavault (2.1.5.1) stable; urgency=low
 
   * Fix bug.
