Send an email to the user if the account is used to log in to the control panel.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (2.1.6) stable; urgency=low
 
   * Update the S.M.A.R.T. attribute descriptions.
+  * Send an email to the user if the account is used to log in to the
+    control panel.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Jul 2015 23:16:49 +0200
 
