--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-20 21:19+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-07-31 09:32+0000\n"
+"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1385,7 +1385,7 @@ msgid "Full"
 msgstr "Полный"
 
 msgid "GID"
-msgstr ""
+msgstr "GID"
 
 msgid "Gabon"
 msgstr "Габон"
@@ -3264,7 +3264,7 @@ msgid "System Logs"
 msgstr "Системные журналы"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Системные аккаунты"
 
 msgid "System time"
 msgstr "Системное время"
@@ -3760,7 +3760,7 @@ msgid "U.S. Virgin Islands"
 msgstr "Американские Виргинские острова"
 
 msgid "UID"
-msgstr ""
+msgstr "UID"
 
 msgid "UNKNOWN"
 msgstr "НЕИЗВЕСТНЫЙ"
@@ -3772,7 +3772,7 @@ msgid "Ukraine"
 msgstr "Украина"
 
 msgid "Unauthorized attempt to modify the system account '%s'"
-msgstr ""
+msgstr "Несанкционированная попытка изменить системную учетную запись '%s'"
 
 msgid "Uncompressed"
 msgstr "Несжатый"
@@ -3904,7 +3904,7 @@ msgid "User ID '%d' already exist"
 msgstr "Идентификатор пользователя '%d' уже существует"
 
 msgid "User accounts"
-msgstr ""
+msgstr "Пользовательские аккаунты"
 
 msgid "User home directory"
 msgstr "Домашний каталог пользователя"
