--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.1.6) stable; urgency=low
 
+  * Update locales.
   * Improve config scripts.
   * Fix an issue with the SSL and SSH certificate config scripts.
   * Update the S.M.A.R.T. attribute descriptions.
