--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,8 +1,14 @@
+openmediavault (2.1.8) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@bintec-elmeg.com>  Fri, 07 Aug 2015 23:10:06 +0200
+
 openmediavault (2.1.7) stable; urgency=low
 
   * Update locales.
-  * Modify sort algorithm in the OMVStorageDeviceAbstract::getDeviceFileById()
-    method.
+  * Mantis 0001370: Multiple identical HDDs treated as one. Modify sort
+    algorithm in the OMVStorageDeviceAbstract::getDeviceFileById() method.
   * Mantis 0001379: Do not display the RAID device itself in various dialogs.
 
  -- Volker Theile <volker.theile@bintec-elmeg.com>  Wed, 05 Aug 2015 12:49:58 +0200
