--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-20 21:19+0200\n"
-"PO-Revision-Date: 2015-07-22 13:39+0000\n"
+"POT-Creation-Date: 2015-08-11 22:31+0200\n"
+"PO-Revision-Date: 2015-08-11 19:58+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #, javascript-format
 msgid "% completed ..."
-msgstr ""
+msgstr "% c dokončeno…"
 
 msgid "%s (%s available)"
 msgstr "%s (%s k dispozici)"
@@ -58,7 +58,7 @@ msgstr "10 let"
 
 #, javascript-format
 msgid "100% completed ..."
-msgstr ""
+msgstr "100% c dokončeno…"
 
 msgid "120 minutes"
 msgstr "120 minut"
@@ -2061,7 +2061,7 @@ msgid "Monitor"
 msgstr "Sledovat"
 
 msgid "Monitoring"
-msgstr "Sledování"
+msgstr "Dohledování"
 
 msgid "Month"
 msgstr "Měsíc"
@@ -2691,7 +2691,7 @@ msgid "Required"
 msgstr "Povinné"
 
 msgid "Reset"
-msgstr "Výchozí hodnoty"
+msgstr "Vrátit na výchozí hodnoty"
 
 msgid "Reset WebGUI state"
 msgstr "Resetovat stav webového rozhraní"
@@ -3258,7 +3258,7 @@ msgid "System Logs"
 msgstr "Protokoly o provozu systému"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Systémové účty"
 
 msgid "System time"
 msgstr "Systémový čas"
