--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (2.1) stable; urgency=low
+
+  * Adapt WebGUI to latest improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Aug 2015 12:24:23 +0200
+
 openmediavault-clamav (2.0) stable; urgency=low
 
   * Update locales.
