--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (2.2) stable; urgency=low
+
+  * Adapt WebGUI to latest improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 20 Aug 2015 12:26:45 +0200
+
 openmediavault-usbbackup (2.1) stable; urgency=low
 
   * Update locales.
