--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.10) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 21 Aug 2015 12:18:15 +0200
+
 openmediavault (2.1.9) stable; urgency=low
 
   * Various improvements.
