--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.11) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Aug 2015 22:05:38 +0200
+
 openmediavault (2.1.10) stable; urgency=low
 
   * Various UI improvements.
