--- a/deb/php5-proctitle/debian/changelog
+++ b/deb/php5-proctitle/debian/changelog
@@ -1,3 +1,12 @@
+php5-proctitle (0.1.2-3) stable; urgency=low
+
+  * Change source/format to 1.0 to avoid the dpkg-buildpackage error
+    'native package version may not have a revision' in Debian Jessie.
+    Otherwise it is not possible to show package improvements via x.x.x-yyy
+    version names.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Aug 2015 09:51:04 +0000
+
 php5-proctitle (0.1.2-2) stable; urgency=low
 
   * Build for Debian Wheezy.
@@ -9,4 +18,3 @@ php5-proctitle (0.1.2-1) stable; urgency=low
   * Initial Release.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 24 Oct 2012 17:57:01 +0000
-
