--- a/deb/shairport-sync/debian/changelog
+++ b/deb/shairport-sync/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.2.2-1) stable; urgency=low
+
+  * Make the Debian Jessie dpkg-buildpackage command happy.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Aug 2015 10:23:02 +0000
+
 shairport-sync (2.2.2) stable; urgency=low
 
   * Initial release.
