--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.12) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Aug 2015 15:44:24 +0200
+
 openmediavault (2.1.11) stable; urgency=low
 
   * Various UI improvements.
