--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (2.3) stable; urgency=low
+
+  * Fix config script issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 02 Sep 2015 12:01:11 +0200
+
 openmediavault-shairport (2.2) stable; urgency=low
 
   * Update locales.
