--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-09-03 08:31+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1382,7 +1382,7 @@ msgid "Full"
 msgstr "Pełny"
 
 msgid "GID"
-msgstr ""
+msgstr "GID"
 
 msgid "Gabon"
 msgstr "Gabon"
@@ -3261,7 +3261,7 @@ msgid "System Logs"
 msgstr "Logi systemowe"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Konta systemowe"
 
 msgid "System time"
 msgstr "Czas systemowy"
@@ -3757,7 +3757,7 @@ msgid "U.S. Virgin Islands"
 msgstr "U.S. Virgin Islands"
 
 msgid "UID"
-msgstr ""
+msgstr "UID"
 
 msgid "UNKNOWN"
 msgstr "NIEZNANY"
@@ -3901,7 +3901,7 @@ msgid "User ID '%d' already exist"
 msgstr "ID '%d' użytkownika już istnieje"
 
 msgid "User accounts"
-msgstr ""
+msgstr "Konta użytkowników"
 
 msgid "User home directory"
 msgstr "Katalog domowy użytkownika"
