--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.13) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 03 Sep 2015 21:33:56 +0200
+
 openmediavault (2.1.12) stable; urgency=low
 
   * Update locales.
