--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-iscsitarget (2.1) stable; urgency=low
 
+  * Update locales.
   * Fix UI error when modifying an existing target.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Sep 2015 06:56:21 +0200
