--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-iscsitarget (2.2) stable; urgency=low
+
+  * Adapt changes in the core UI framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 Sep 2015 12:17:11 +0200
+
 openmediavault-iscsitarget (2.1) stable; urgency=low
 
   * Update locales.
