--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.1.16) stable; urgency=low
 
   * Improve UI framework.
+  * Mantis 0001397: Add support for NVMe devices.
   * Mantis 0001400: Configuration for collectd not include wireless interfaces.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 Sep 2015 22:05:00 +0200
