--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-shairport (2.4) stable; urgency=low
+
+  * Update locales.
+  * Adapt plugin to shairport-sync 2.4.1.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Oct 2015 10:09:13 +0200
+
 openmediavault-shairport (2.3) stable; urgency=low
 
   * Update locales.
