--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/uk_UK/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/uk_UK/openmediavault-shairport.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# zubr139, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2014-06-23 16:18+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-09-26 12:14+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,22 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "A password is required to stream audio."
-msgstr ""
+msgstr "Потрібний пароль для потокової передачі аудіо."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Автентифікація"
 
 msgid "Enable"
-msgstr ""
+msgstr "Увімкнути"
 
 msgid "General settings"
-msgstr ""
+msgstr "Загальні налаштування"
 
 msgid "Password"
-msgstr ""
+msgstr "Пароль"
 
 msgid "Settings"
-msgstr ""
+msgstr "Налаштування"
 
 msgid "Shairport"
-msgstr ""
+msgstr "Shairport"
