--- a/deb/shairport-sync/debian/changelog
+++ b/deb/shairport-sync/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.4.1-1) stable; urgency=low
+
+  * New upstream release.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Oct 2015 09:26:03 +0200
+
 shairport-sync (2.2.2-1) stable; urgency=low
 
   * Make the Debian Jessie dpkg-buildpackage command happy.
