--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.17) stable; urgency=low
+
+  * Mantis 0001397: Add support for NVMe devices.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 06 Oct 2015 12:30:54 +0200
+
 openmediavault (2.1.16) stable; urgency=low
 
   * Improve UI framework.
