--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-10-06 16:27+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1378,7 +1378,7 @@ msgid "Full"
 msgstr "Πλήρες"
 
 msgid "GID"
-msgstr ""
+msgstr "Αναγνωριστικό ομάδας"
 
 msgid "Gabon"
 msgstr "Gabon"
@@ -3257,7 +3257,7 @@ msgid "System Logs"
 msgstr "Καταγραφή συστήματος"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Λογαριασμοί συστήματος"
 
 msgid "System time"
 msgstr "Ώρα συστήματος"
@@ -3753,7 +3753,7 @@ msgid "U.S. Virgin Islands"
 msgstr "U.S. Virgin Islands"
 
 msgid "UID"
-msgstr ""
+msgstr "Αναγνωριστικό χρήστη"
 
 msgid "UNKNOWN"
 msgstr "ΑΓΝΩΣΤΟΝ"
@@ -3765,7 +3765,7 @@ msgid "Ukraine"
 msgstr "Ukraine"
 
 msgid "Unauthorized attempt to modify the system account '%s'"
-msgstr ""
+msgstr "Ακατάλληλη προσπάθεια τροποποίησης του λογαριασμού συστήματος '%s'"
 
 msgid "Uncompressed"
 msgstr "Ασυμπίεστο"
@@ -3897,7 +3897,7 @@ msgid "User ID '%d' already exist"
 msgstr "Ο χρήστης με αναγνωριστικό '%d' υπάρχει ήδη"
 
 msgid "User accounts"
-msgstr ""
+msgstr "Λογαριασμοί χρηστών"
 
 msgid "User home directory"
 msgstr "Φάκελος χρήστη"
