--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-22 13:36+0000\n"
+"PO-Revision-Date: 2015-10-05 02:36+0000\n"
 "Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -2229,7 +2229,7 @@ msgid "Number of servers"
 msgstr "服务器数量"
 
 msgid "OK"
-msgstr "OK"
+msgstr "是"
 
 msgid "Occurrence"
 msgstr "发生次数"
@@ -2435,7 +2435,7 @@ msgid ""
 msgstr "请注意在此测试期间可能不能和系统进行通讯。"
 
 msgid "Please reload the page to let the changes take effect."
-msgstr "请重载页面让更改生效。"
+msgstr "请刷新页面让更改生效。"
 
 msgid "Please wait ..."
 msgstr "请稍等 ..."
@@ -2642,7 +2642,7 @@ msgid "Refresh"
 msgstr "更新"
 
 msgid "Reload"
-msgstr "重载"
+msgstr "刷新"
 
 msgid "Remaining"
 msgstr "剩余"
@@ -3351,7 +3351,7 @@ msgstr "主机名可以作为网络上识别系统的标签。"
 msgid ""
 "The information about available software is out-of-date. You need to reload "
 "the information about available software."
-msgstr "可用软件信息已过期，你需要重载获取最新可用软件包信息。"
+msgstr "可用软件信息已过期，你需要刷新获取最新可用软件包信息。"
 
 msgid "The interface '%s' is already used by a bonding interface"
 msgstr "接口 '%s' 已经被汇聚使用"
@@ -3374,7 +3374,7 @@ msgid "The number of days the certificate is valid for."
 msgstr "证书有效期天数。"
 
 msgid "The page will reload now to let the changes take effect."
-msgstr "现在重载页面使变更生效。"
+msgstr "现在刷新页面使变更生效。"
 
 #, php-format
 msgid "The parameter '%s' contains forbidden two-dot symbols"
