--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-shairport (2.5.1) stable; urgency=low
+
+  * Mantis 0001410: Add the possibillity to change the name the service
+    will advertise to iTunes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 31 Oct 2015 16:52:10 +0100
+
 openmediavault-shairport (2.5) stable; urgency=low
 
   * Update locales.
