--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-07-20 19:19+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-11-20 09:02+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1379,7 +1379,7 @@ msgid "Full"
 msgstr "Teljes"
 
 msgid "GID"
-msgstr ""
+msgstr "GID"
 
 msgid "Gabon"
 msgstr "Gabon"
@@ -3258,7 +3258,7 @@ msgid "System Logs"
 msgstr "Rendszernaplók"
 
 msgid "System accounts"
-msgstr ""
+msgstr "Rendszer fiókok"
 
 msgid "System time"
 msgstr "Rendszeridő"
@@ -3754,7 +3754,7 @@ msgid "U.S. Virgin Islands"
 msgstr "U.S. Virgin-szigetek"
 
 msgid "UID"
-msgstr ""
+msgstr "UID"
 
 msgid "UNKNOWN"
 msgstr "ISMERETLEN"
@@ -3898,7 +3898,7 @@ msgid "User ID '%d' already exist"
 msgstr "Felhasználó ID '%d' már létezik"
 
 msgid "User accounts"
-msgstr ""
+msgstr "Felhasználói fiókok"
 
 msgid "User home directory"
 msgstr "Felhasználói saját könyvtár"
