--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.21) stable; urgency=low
+
+  * Fix bug in omv-initsystem.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Dec 2015 13:01:04 +0100
+
 openmediavault (2.1.20) stable; urgency=low
 
   * Mantis 0001421: TRIM ('discard') is not enabled for SSDs. Thanks
