--- a/deb/php5-pam/debian/changelog
+++ b/deb/php5-pam/debian/changelog
@@ -1,3 +1,9 @@
+php5-pam (1.0.3-4) stable; urgency=low
+
+  * Build for Debian Jessie.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Nov 2015 16:41:48 +0100
+
 php5-pam (1.0.3-3) stable; urgency=low
 
   * Change source/format to 1.0 to avoid the dpkg-buildpackage error
