--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (3.0) stable; urgency=low
+
+  * Adapt to Debian 8 (Jessie).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 21 Dec 2015 19:43:36 +0100
+
 openmediavault-lvm2 (2.1) stable; urgency=low
 
   * Update locales.
