--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.22) stable; urgency=low
+
+  * Mantis 0001428: Add support for I2O based RAID arrays.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Dec 2015 02:42:03 +0100
+
 openmediavault (2.1.21) stable; urgency=low
 
   * Fixing bug in omv-initsystem.
