--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.1.24) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 31 Dec 2015 13:45:41 +0100
+
 openmediavault (2.1.23) stable; urgency=low
 
   * Mantis 0001430: omv-po2json crashes while converting .po files to JSON.
