--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.2) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Jan 2016 21:49:46 +0100
+
 openmediavault (3.0.1) stable; urgency=low
 
   * Various improvements.
