--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.0.1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 03 Jan 2016 00:59:32 +0100
+
 openmediavault-forkeddaapd (3.0) stable; urgency=low
 
   * Adapt to Debian 8 (Jessie).
