--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.3) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Jan 2016 13:46:59 +0100
+
 openmediavault (3.0.2) stable; urgency=low
 
   * Various improvements.
