--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.0.1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Jan 2016 18:25:06 +0100
+
 openmediavault-nut (3.0) stable; urgency=low
 
   * Adapt to Debian 8 (Jessie).
