--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-08-11 22:31+0200\n"
-"PO-Revision-Date: 2015-11-20 09:02+0000\n"
+"PO-Revision-Date: 2015-12-30 14:28+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -3766,7 +3766,7 @@ msgid "Ukraine"
 msgstr "Ukrajna"
 
 msgid "Unauthorized attempt to modify the system account '%s'"
-msgstr ""
+msgstr "Jogosulatlan rendszerfiók módosítási kísérlet '%s'"
 
 msgid "Uncompressed"
 msgstr "Tömörítetlen"
