--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.0.2) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Jan 2016 18:14:38 +0100
+
 openmediavault-nut (3.0.1) stable; urgency=low
 
   * Various improvements.
