--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.5) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 06 Jan 2016 12:19:14 +0100
+
 openmediavault (3.0.4) stable; urgency=low
 
   * Various improvements.
