--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.5) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0000870: Option to add more than one NTP server.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 06 Jan 2016 12:19:14 +0100
 
